cupt (2.8.0~) UNRELEASED; urgency=low

  * lib:
    - system/resolvers/native:
      - 'upgrade': re-implemented in terms of 'satisfyRelationExpression'.
    - cache:
      - 'getSatisfyingVersions': minimal single-arch support for ':any'
        suffixes.
    - 'consumePackageName': allow ':' character.
  * test:
    - Introduced.
  * debian:
    - libcupt3-0.shlibs: bumped to 2.8.0~.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Tue, 04 Mar 2014 21:16:49 +0200

cupt (2.7.3) unstable; urgency=low

  * lib:
    - system/resolvers/native:
      - Fixed failing to satisfy 'remove x --no-remove'-kinds of requests.
        This regression was introduced in 2.6.0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 18 Apr 2014 17:41:29 +0300

cupt (2.7.2) unstable; urgency=low

  * lib:
    - system/resolvers/native:
      - Branch filtering heuristics: fixed skipping sticked but satisfying
        elements. This could lead to skipping some valid solutions.
        This regression was introduced in 2.7.0.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Wed, 05 Mar 2014 21:05:37 +0200

cupt (2.7.1) unstable; urgency=low

  * lib:
    - config:
      - 'setScalar': for options from foreign families, save also their
        normalized form if it's recognized/used. This regression was
        introduced in 2.7.0. (Closes: #740141)
  * doc:
    - news:
      - Filled for 2.7.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 01 Mar 2014 11:47:46 +0200

cupt (2.7.0) unstable; urgency=low

  * lib:
    - Fixed not invoking std::terminate() when a pipe process fail.
    - config:
      - New option 'cupt::directory::configuration::pre'.
      - 'setScalar': accept options from foreign families. They may be useful
        for e.g. hooks.
      - Option 'cupt::resolver::max-solution-count': increased default value
        from 512 to 8192.
    - system/resolvers/native:
      - Reduced solution memory footprint.
      - Reduced average CPU costs of postprocessing failed solutions.