@@ -6,6 +6,8 @@ cupt (2.8.0~) UNRELEASED; urgency=low
     - cache:
       - 'getSatisfyingVersions': minimal single-arch support for ':any'
         suffixes.
+    - cache/relation:
+      - Constructor: reject package names starting with an allowed symbol.
     - 'consumePackageName': allow ':' character.
   * test:
     - Introduced.
